# Xiaohulu_AI_Car

./: .clangd  .gitignore  16m.csv  CMakeLists.txt  README.md  REME.md  sdkconfig.defaults  参考.json
.claude/: settings.json
components/BSP/: CMakeLists.txt
components/BSP/HTML/: apcfg.html
components/BSP/IOT/: onenet_dm.c  onenet_dm.h  onenet_mqtt.c  onenet_token.c  wifi_manager.c
components/BSP/LED/: led_ws2812.c  led_ws2812.h
components/BSP/WIFI/: readme.txt  web_server_bridge.c  web_server_bridge.h  wifi.c  wifi.h  wifi_mode.c  wifi_mode.h  wifi_nvs.c  wifi_nvs.h
components/BSP/WIFI_M/: ap_wifi.c  ap_wifi.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
main/: idf_component.yml  main.c
